Refactored a main to be a unit test